src/test/ui/consts/const_let_assign4.stderr
error[E0658]: mutable references are not allowed in constants
  --> $DIR/const_let_assign4.rs:23:13
   |
LL |     let y = &mut x;
   |             ^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
